--- a/localization/languages/ru.json
+++ b/localization/languages/ru.json
@@ -23,7 +23,7 @@
     "cut": "Вырезать",
     "copy": "Копировать", //this is a verb (as in "copy the currently-selected text")
     "paste": "Вставить",
-    "pasteAndMatchStyle": null, //missing translation
+    "pasteAndMatchStyle": "Вставить в текущем стиле",
     "goBack": "Назад",
     "goForward": "Вперёд",
     "inspectElement": "Инспектировать элемент",
@@ -158,6 +158,7 @@
     "settingsAdditionalFeaturesHeading": "Дополнительные возможности",
     "settingsUserscriptsToggle": "Пользовательские скрипты",
     "settingsShowDividerToggle": "Показывать разделитель между вкладками",
+    "settingsLanguageSelection": "Язык: ",
     "settingsSeparateTitlebarToggle": "Использовать системный заголовок окна",
     "settingsAutoplayToggle": "Включить автоматическое воспроизведение",
     "settingsOpenTabsInForegroundToggle": "Открывать новые вкладки на переднем плане",
@@ -205,7 +206,7 @@
     "appMenuCut": "Вырезать",
     "appMenuCopy": "Копировать",
     "appMenuPaste": "Вставить",
-    "appMenuPasteAndMatchStyle": null, //missing translation
+    "appMenuPasteAndMatchStyle": "Вставить в текущем стиле",
     "appMenuSelectAll": "Выделить всё",
     "appMenuFind": "Найти",
     "appMenuView": "Вид",
