--- a/localization/languages/uk.json
+++ b/localization/languages/uk.json
@@ -23,7 +23,7 @@
     "cut": "Вирізати",
     "copy": "Копіювати", //this is a verb (as in "copy the currently-selected text")
     "paste": "Вставити",
-    "pasteAndMatchStyle": null, //missing translation
+    "pasteAndMatchStyle": "Вставити в поточному стилі",
     "goBack": "Назад",
     "goForward": "Вперед",
     "inspectElement": "Дослідити елемент",
@@ -159,6 +159,7 @@
     "settingsAdditionalFeaturesHeading": "Додаткові можливості",
     "settingsUserscriptsToggle": "Увімкнути скрипти користувача",
     "settingsShowDividerToggle": "Показувати роздільник між вкладками",
+    "settingsLanguageSelection": "Мова: ",
     "settingsSeparateTitlebarToggle": "Використовувати окремий рядок заголовка",
     "settingsAutoplayToggle": "Увімкнути автовідтворення",
     "settingsOpenTabsInForegroundToggle": "Відкривати нові вкладки на передньому плані",
@@ -206,7 +207,7 @@
     "appMenuCut": "Вирізати",
     "appMenuCopy": "Копіювати",
     "appMenuPaste": "Вставити",
-    "appMenuPasteAndMatchStyle": null, //missing translation
+    "appMenuPasteAndMatchStyle": "Вставити в поточному стилі",
     "appMenuSelectAll": "Вибрати все",
     "appMenuFind": "Знайти",
     "appMenuView": "Вигляд",
